# pong-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lint.sh  pong
include/: Ball.hpp  Draw.hpp  Enemy.hpp  Font.hpp  Game.hpp  GameObject.hpp  Keyboard.hpp  Math.hpp  Pad.hpp  Player.hpp  PluginManager.hpp  collision.hpp
src/: Ball.cpp  Draw.cpp  Enemy.cpp  Font.cpp  Game.cpp  GameObject.cpp  Keyboard.cpp  Math.cpp  Pad.cpp  Player.cpp  PluginManager.cpp  collision.cpp  main.cpp
